--- a/Routebird/Info.plist
+++ b/Routebird/Info.plist
@@ -22,7 +22,14 @@
 
     <key>UIMainStoryboardFile</key>
     <string></string>
-
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Your location is needed to track your route on the map.</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Your location is needed to track your route on the map, even when the app is in the background.</string>
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>location</string>
+    </array>
     <!-- LOCATION PERMISSIONS -->
     <key>NSLocationWhenInUseUsageDescription</key>
     <string>Your location is needed to track your route on the map.</string>
